# mail-mcp

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
deploy/: .env.example  docker-compose.yml
src/mail_mcp/: .env.example  __init__.py  cli.py  config.py  config.yaml  daemon.py  http_app.py  server.py
src/mail_mcp/admin/: __init__.py  cli.py  service.py  telegram.py
src/mail_mcp/core/: __init__.py  imap_client.py  models.py  smtp_client.py
src/mail_mcp/tools/: __init__.py  compose.py  guide.py  manage.py  read.py
tests/: __init__.py  test_config.py  test_models.py  test_version_and_guide.py
